# mcp-squared

./: pyproject.toml  setup.py
mcpsquared/: __init__.py  merged_mcp_server.py  server.py  simple_orchestrator.py
mcpsquared/mcpsquared_main/: __init__.py  mcpsquared_agent.py  mcpsquared_main_server.py
mcpsquared/phase_tools/: __init__.py  phase1.py  phase2.py  phase_tools_mcp_server.py
mcpsquared/phase_tools/agents/: subagents.py
mcpsquared/phase_tools/models/: requests.py
mcpsquared/phase_tools/utils/: helpers.py
mcpsquared/schema_tools/: __init__.py  schema_tools.py
mcpsquared/schema_tools/models/: __init__.py  schemas.py
