[build-system]
requires = ["setuptools>=45", "wheel", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "mcpsquared"
version = "0.1.0"
description = "Ultra-Minimal MCPSquared MVP - Workflow generation for MCP servers"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Isaac & Claude", email = "isaacwrubin@gmail.com"}
]
keywords = ["mcp", "workflow", "generator"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11"
]
dependencies = [
    "fastmcp>=2.0.0",
    "pydantic>=2.0.0",
    "mcp-use>=0.1.0",
    "langchain-openai>=0.1.0",
    "python-dotenv>=1.0.0"
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio"
]

[project.scripts]
mcpsquared-server = "mcpsquared.server:main"

[project.urls]
Homepage = "https://github.com/sancovp/mcpsquared"
Repository = "https://github.com/sancovp/mcpsquared"
Issues = "https://github.com/sancovp/mcpsquared/issues"

[tool.setuptools]
packages = {find = {}}
include-package-data = true